plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.6'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.pocket_plant'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'

    // HTTP Client
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'
}

tasks.named('test') {
    useJUnitPlatform()
}

// --- React 연동 설정 (도커 및 로컬 통합) ---

//def reactAppDir = "$projectDir/pocket_plant_web"
//
//task npmBuild(type: Exec) {
//    workingDir "$reactAppDir"
//    // OS 구분: Windows일 경우 npm.cmd, 리눅스/도커일 경우 npm
//    def isWindows = System.getProperty("os.name").toLowerCase().contains("windows")
//    commandLine isWindows ? ["npm.cmd", "run", "build"] : ["npm", "run", "build"]
//}
//
//task copyReactBuildFiles(type: Copy) {
//    dependsOn "npmBuild"
//    from "$reactAppDir/dist" // Vite 빌드 결과 경로
//    into "$projectDir/src/main/resources/static"
//}
//
//// 빌드 시 React 빌드가 무조건 먼저 실행되도록 설정
//processResources {
//    dependsOn "copyReactBuildFiles"
//}